admin user payment refund completed

--- a/Backend/public/admin/index.html
+++ b/Backend/public/admin/index.html
@@ -175,6 +175,10 @@
       <div class="main-panel">
         <div class="content-wrapper">
 
+          <div>
+              <p id="error-container" class="text-danger"></p>
+          </div>
+
           <div class="row">
             <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
               <div class="card">
@@ -262,6 +266,15 @@
                 <div class="card-body">
                   <h4 class="card-title">Transaction History</h4>
                   <canvas id="transaction-history" class="transaction-chart"></canvas>
+                  <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded mt-3">
+                    <div class="text-md-center text-xl-left">
+                      <h6 class="mb-1">Deposites</h6>
+                      <!-- <p class="text-muted mb-0">07 Jan 2019, 09:12AM</p> -->
+                    </div>
+                    <div class="align-self-center flex-grow text-right text-md-center text-xl-right py-md-2 py-xl-0">
+                      <h6 class="font-weight-bold mb-0" id="deposite">0</h6>
+                    </div>
+                  </div>
                   <div class="bg-gray-dark d-flex d-md-block d-xl-flex flex-row py-3 px-4 px-md-3 px-xl-4 rounded mt-3">
                     <div class="text-md-center text-xl-left">
                       <h6 class="mb-1">Profit</h6>
