--- a/Backend/public/admin/message.html
+++ b/Backend/public/admin/message.html
@@ -96,8 +96,7 @@
           </a>
         </li>
         <li class="nav-item menu-items">
-          <a class="nav-link"
-            href="message.html">
+          <a class="nav-link" href="message.html">
             <span class="menu-icon">
               <i class="mdi mdi-file-document-box"></i>
             </span>
@@ -228,6 +227,10 @@
       <!-- partial -->
       <div class="main-panel">
         <div class="content-wrapper">
+
+          <div>
+            <p id="error-container" class="text-danger"></p>
+          </div>
 
           <div class="col-md-12 grid-margin stretch-card">
             <div class="card">
