--- a/Backend/public/admin/userDetail.html
+++ b/Backend/public/admin/userDetail.html
@@ -96,8 +96,7 @@
           </a>
         </li>
         <li class="nav-item menu-items">
-          <a class="nav-link"
-            href="message.html">
+          <a class="nav-link" href="message.html">
             <span class="menu-icon">
               <i class="mdi mdi-file-document-box"></i>
             </span>
@@ -172,18 +171,260 @@
       <div class="main-panel">
         <div class="content-wrapper">
 
-          <div class="col-md-12 grid-margin stretch-card">
-            <div class="card">
-              <div class="card-body">
-                <div class="d-flex flex-row justify-content-between">
-                  <h4 class="card-title">Messages</h4>
-                  </p>
+          <div>
+            <p id="error-container" class="text-danger"></p>
+          </div>
+
+          <div class="row">
+            <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
+              <div class="card">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-9">
+                      <div class="d-flex align-items-center align-self-start">
+                        <h3 class="mb-0" id="totalProject">0</h3>
+                      </div>
+                    </div>
+                    <div class="col-3">
+                      <div class="icon icon-box-success ">
+                        <span class="mdi mdi-arrow-top-right icon-item"></span>
+                      </div>
+                    </div>
+                  </div>
+                  <h6 class="text-muted font-weight-normal">Total Projects</h6>
                 </div>
-
-                <div class="preview-list" id="messageContainer">
-
+              </div>
+            </div>
+            <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
+              <div class="card">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-9">
+                      <div class="d-flex align-items-center align-self-start">
+                        <h3 class="mb-0" id="completedProject">0</h3>
+                      </div>
+                    </div>
+                    <div class="col-3">
+                      <div class="icon icon-box-success">
+                        <span class="mdi mdi-arrow-top-right icon-item"></span>
+                      </div>
+                    </div>
+                  </div>
+                  <h6 class="text-muted font-weight-normal">Completed Projects</h6>
                 </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
+              <div class="card">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-9">
+                      <div class="d-flex align-items-center align-self-start">
+                        <h3 class="mb-0" id="processingProject">0</h3>
+                      </div>
+                    </div>
+                    <div class="col-3">
+                      <div class="icon icon-box-success ">
+                        <span class="mdi mdi-arrow-top-right icon-item"></span>
+                      </div>
+                    </div>
+                  </div>
+                  <h6 class="text-muted font-weight-normal">Processing Projects</h6>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
+              <div class="card">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-9">
+                      <div class="d-flex align-items-center align-self-start">
+                        <h3 class="mb-0" id="failedProject">0</h3>
+                      </div>
+                    </div>
+                    <div class="col-3">
+                      <div class="icon icon-box-success ">
+                        <span class="mdi mdi-arrow-top-right icon-item"></span>
+                      </div>
+                    </div>
+                  </div>
+                  <h6 class="text-muted font-weight-normal">Failed Projects</h6>
+                </div>
+              </div>
+            </div>
+          </div>
 
+          <div class="row">
+            <div class="col-xl-4 col-sm-6 grid-margin stretch-card">
+              <div class="card">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-9">
+                      <div class="d-flex align-items-center align-self-start">
+                        <h3 class="mb-0" id="totalPrice">0</h3>
+                      </div>
+                    </div>
+                    <div class="col-3">
+                      <div class="icon icon-box-success ">
+                        <span class="mdi mdi-arrow-top-right icon-item"></span>
+                      </div>
+                    </div>
+                  </div>
+                  <h6 class="text-muted font-weight-normal">Total Amount</h6>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-4 col-sm-6 grid-margin stretch-card">
+              <div class="card">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-9">
+                      <div class="d-flex align-items-center align-self-start">
+                        <h3 class="mb-0" id="usedPrice">0</h3>
+                      </div>
+                    </div>
+                    <div class="col-3">
+                      <div class="icon icon-box-success">
+                        <span class="mdi mdi-arrow-top-right icon-item"></span>
+                      </div>
+                    </div>
+                  </div>
+                  <h6 class="text-muted font-weight-normal">Amount Used</h6>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-4 col-sm-6 grid-margin stretch-card">
+              <div class="card">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-9">
+                      <div class="d-flex align-items-center align-self-start">
+                        <h3 class="mb-0" id="refundedPrice">0</h3>
+                      </div>
+                    </div>
+                    <div class="col-3">
+                      <div class="icon icon-box-success ">
+                        <span class="mdi mdi-arrow-top-right icon-item"></span>
+                      </div>
+                    </div>
+                  </div>
+                  <h6 class="text-muted font-weight-normal">Refunded Amount</h6>
+                </div>
+              </div>
+            </div>
+            <!-- <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
+              <div class="card">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-9">
+                      <div class="d-flex align-items-center align-self-start">
+                        <h3 class="mb-0" id="failedProject">0</h3>
+                      </div>
+                    </div>
+                    <div class="col-3">
+                      <div class="icon icon-box-success ">
+                        <span class="mdi mdi-arrow-top-right icon-item"></span>
+                      </div>
+                    </div>
+                  </div>
+                  <h6 class="text-muted font-weight-normal">Failed Projects</h6>
+                </div>
+              </div>
+            </div> -->
+          </div>
+
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Project Update</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <!-- Form -->
+                  <form>
+                    <div class="form-group my-2">
+                      <label for="projectName">Project Name:</label>
+                      <input type="text" class="form-control bg-white" id="projectName"
+                        placeholder="Enter project name">
+                    </div>
+
+                    <div class="form-group my-4">
+                      <label for="fileUploader">File Upload:</label>
+                      <input type="file" class="form-control-file" id="fileUploader">
+                    </div>
+
+                    <div class="form-group my-4">
+                      <label for="statusDropdown">Status:</label>
+                      <select class="form-control" id="statusDropdown" style="background-color: white;">
+                        <option value="submitted">Submitted</option>
+                        <option value="process">Process</option>
+                        <option value="completed">Completed</option>
+                        <option value="failed">Failed</option>
+                      </select>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-12 grid-margin stretch-card">
+              <div class="card">
+                <div class="card-body" style="height: 350px; overflow-y: auto; overflow-x: hidden;">
+                  <h4 class="card-title">Refunds</h4>
+                  <div class="preview-list" id="refundContainer">
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row ">
+            <div class="col-12 grid-margin">
+              <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title">Projects</h4>
+                  <div class="table-responsive">
+                    <table class="table">
+                      <thead>
+                        <tr>
+                          <th> Project Name</th>
+                          <th> Date </th>
+                          <th> Status </th>
+                          <th> Download </th>
+                          <th> Action </th>
+                        </tr>
+                      </thead>
+                      <tbody id="table-data">
+                        <!-- <tr>
+                          <td>
+                            <span>Henry Klein</span>
+                          </td>
+                          <td> inb498@gmail.com </td>
+                          <td> $14,500 </td>
+                          <td>
+                            <button type="button" class="btn btn-primary" data-toggle="modal"
+                              data-target="#exampleModal">
+                              update
+                            </button>
+                          </td>
+                        </tr> -->
+                      </tbody>
+                    </table>
+                    <div id="no-user-data" class="pt-5"></div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
